--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"express": "2.5.8",
 		"jade": ">= 0.0.1",
 		"mongodb": ">= 0.9.6-7",
-		"expresso": ">= 0.9.0"
+		"expresso": ">= 0.9.0",
+		"WoD-Dice": "latest"
 	}
 }
