--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-	"name": "Valerie-JS",
-	"version": "0.0.1",
-	"private": true,
-	"dependencies": {
-		"express": "2.5.8",
-		"jade": ">= 0.0.1",
-		"mongodb": ">= 0.9.6-7",
-		"expresso": ">= 0.9.0",
-		"WoD-Dice": "latest"
-	}
+  "name": "Valerie-JS",
+  "version": "0.0.1",
+  "private": true,
+  "dependencies": {
+    "express": "2.5.8",
+    "jade": ">= 0.0.1",
+    "mongodb": ">= 0.9.6-7",
+    "expresso": ">= 0.9.0",
+    "WoD-Dice": "latest",
+    "mongoskin": "latest"
+  }
 }
